--- a/Part2.tex
+++ b/Part2.tex
@@ -106,6 +106,12 @@
 Chapters \RomanNumeralCaps{5} to \RomanNumeralCaps{8}}
 \begin{document}
 \maketitle
+\begin{figure}%                 use [hb] only if necceccary!
+  \centering
+  \includegraphics[width=10cm]{zebook.jpg}
+  \caption{My copy, falling apart...}
+  \label{fig:test}
+\end{figure}
 
 \section*{Remarks and warnings}
 You're welcome to use these notes, but they may contain errors, so proceed with caution : I graduated in 1979, went straight in the industry (where I didn't have to use fancy maths), and picked mathematics and physics again after I retired, so my mathematics got rusty  for sure. If you do find an error, typo's , I'd be happy to receive bug reports, suggestions, and the like, through Github.
